# triangulate

./: .editorconfig  .gitattributes  .gitignore  LICENSE  NOTES.md  README.md  compare.py  pyproject.toml  run_all.ps1
.github/workflows/: ci.yml
01_vectorbt/: README.md  requirements.txt  run.py
02_nautilus/: README.md  macd_indicator.py  requirements.txt  run.py  strategy.py
03_mt5/: README.md  export_data.py  macd_crossover_ea.mq5  requirements.txt  run.py
data/: README.md  eurusd_h1.csv  get_data.py  requirements.txt
results/: comparison.md  metrics.csv  metrics.md
shared/: __init__.py  config.py  data.py  indicators.py  metrics.py  reference_backtest.py  results.py  signals.py
tests/: test_indicators.py  test_metrics.py
